crates/pamoja-ffi/include/pamoja.h

// The result of a fallible pamoja call.
//
// A return of [`PamojaStatus::Ok`] means success; any other value indicates a
// failure whose description is available from [`pamoja_last_error_message`] on
// the same thread.
typedef enum {
  // The call succeeded.
  PamojaStatus_Ok = 0,
  // A transport-level failure while connecting, sending, or receiving.
  PamojaStatus_Transport = 1,
  // A device or peripheral input/output operation failed.
  PamojaStatus_Io = 2,
  // A payload could not be encoded or decoded.
  PamojaStatus_Codec = 3,
  // The operation targeted a resource that is closed or disconnected.
  PamojaStatus_Closed = 4,
  // The requested capability is not compiled into this build.
  PamojaStatus_Unsupported = 5,
  // An argument was null or otherwise invalid, for example non-UTF-8 text.
  PamojaStatus_InvalidArgument = 6,
  // A failure that does not map onto a more specific status.
  PamojaStatus_Other = 7,
  // A Rust panic was caught at the boundary; the call had no effect.
  PamojaStatus_Panic = 8,
  // A security check failed, such as an invalid identity or a bad signature.
  PamojaStatus_Auth = 9,
} PamojaStatus;
// What a node should be doing at the current state of charge.
typedef enum {
  // Full duty, because the charge is healthy.
  PamojaPowerMode_Active = 0,
  // Reduced duty, to conserve charge.
  PamojaPowerMode_Saver = 1,
  // Minimum duty, to stay alive as long as possible.
  PamojaPowerMode_Critical = 2,
} PamojaPowerMode;
// How urgent an event is.
//
// A reporter ships an event whose level is at or above its threshold and drops
// anything below it, so the order of these values is what the filter compares.
typedef enum {
  // Fine-grained detail, useful only when chasing a specific problem.
  PamojaTelemetryLevel_Trace = 0,
  // Diagnostic detail for development.
  PamojaTelemetryLevel_Debug = 1,
  // A normal, noteworthy event.
  PamojaTelemetryLevel_Info = 2,
  // Something unexpected that the node recovered from.
  PamojaTelemetryLevel_Warn = 3,
  // A failure that needs attention.
  PamojaTelemetryLevel_Error = 4,
} PamojaTelemetryLevel;
// What the link back to the network currently costs.
typedef enum {
  // Bytes are effectively free, such as on wired power and ethernet.
  PamojaLinkCost_Free = 0,
  // Bytes are paid for, such as on a cellular plan.
  PamojaLinkCost_Metered = 1,
  // Bytes are scarce, such as on a satellite or long-range radio link.
  PamojaLinkCost_Expensive = 2,
  // Nothing can be shipped at all.
  PamojaLinkCost_Offline = 3,
} PamojaLinkCost;
// What a bootloader should do with what it found.
typedef enum {
  // Nothing new to try; run the confirmed image.
  PamojaBootAction_Confirmed = 0,
  // A staged image is being tried for the first time.
  PamojaBootAction_Trying = 1,
  // A pending image never confirmed, so it was failed.
  PamojaBootAction_Reverted = 2,
} PamojaBootAction;
// An opaque handle to one reporter and its counters.
//
// Create it with [`pamoja_reporter_new`], feed it with
// [`pamoja_reporter_record`], and release it with [`pamoja_reporter_free`].
typedef struct PamojaReporter PamojaReporter;
// An opaque handle to a device slots and the rules applied to them.
//
// Create it with [`pamoja_updater_new`] and release it with
// [`pamoja_updater_free`].
typedef struct PamojaUpdater PamojaUpdater;
// The split between the time a node works and the time it sleeps.
typedef struct {
  // How long the node stays awake each period, in microseconds.
  uint64_t active_us;
  // How long it sleeps each period, in microseconds.
  uint64_t sleep_us;
} PamojaDutyCycle;
// The work intervals a node uses in each mode, and where the modes change.
//
// Build one with [`pamoja_power_plan_new`], which applies the default
// thresholds, then move them with [`pamoja_power_plan_with_thresholds`].
typedef struct {
  // The interval between work at a healthy charge, in microseconds.
  uint64_t active_us;
  // The interval used to conserve charge, in microseconds.
  uint64_t saver_us;
  // The interval used at a critically low charge, in microseconds.
  uint64_t critical_us;
  // Enter [`PamojaPowerMode::Saver`] below this state of charge.
  float saver_below;
  // Enter [`PamojaPowerMode::Critical`] below this state of charge.
  float critical_below;
} PamojaPowerPlan;
// A count of everything a reporter has seen, cheap enough to ship anywhere.
//
// This is what a node sends in place of the event stream when the link cannot
// carry the detail: the shape of what happened survives even though the
// individual events did not.
typedef struct {
  // How many events were seen at each level, indexed by
  // [`PamojaTelemetryLevel`].
  uint32_t by_level[PAMOJA_TELEMETRY_LEVEL_COUNT];
  // How many events passed the filter and were shipped.
  uint32_t emitted;
  // How many events the filter dropped.
  uint32_t dropped;
} PamojaTelemetrySnapshot;
// The decision a device made at boot, already recorded before it was returned.
typedef struct {
  // What the bootloader should do.
  PamojaBootAction action;
  // The image the decision is about, which for
  // [`PamojaBootAction::Reverted`] is the one that failed.
  uint8_t slot;
  // The slot to run. It is the same as `slot` for anything but
  // [`PamojaBootAction::Reverted`].
  uint8_t fallback;
} PamojaBoot;
// Creates a duty cycle from the time awake and the time asleep.
//
// # Arguments
//
// * `active_us` - how long the node works each period, in microseconds.
// * `sleep_us` - how long it sleeps each period, in microseconds.
//
// # Returns
//
// The duty cycle.
PamojaDutyCycle pamoja_duty_cycle_new(uint64_t active_us, uint64_t sleep_us);
// Creates a duty cycle that spends a fraction of each period awake.
//
// # Arguments
//
// * `period_us` - the whole period, in microseconds.
// * `fraction` - the share of the period spent awake, clamped to 0.0 through 1.0.
//
// # Returns
//
// The duty cycle.
PamojaDutyCycle pamoja_duty_cycle_from_fraction(uint64_t period_us, float fraction);
// Returns the whole period of a duty cycle, awake plus asleep.
//
// # Arguments
//
// * `duty` - the duty cycle.
//
// # Returns
//
// The period in microseconds.
uint64_t pamoja_duty_cycle_period_us(PamojaDutyCycle duty);
// Returns the share of a period a duty cycle spends awake.
//
// # Arguments
//
// * `duty` - the duty cycle.
//
// # Returns
//
// The fraction from 0.0 through 1.0, or `0.0` if the period is zero.
float pamoja_duty_cycle_fraction(PamojaDutyCycle duty);
// Creates a power plan from its three work intervals, with default thresholds.
//
// The defaults enter [`PamojaPowerMode::Saver`] below 50% charge and
// [`PamojaPowerMode::Critical`] below 20%.
//
// # Arguments
//
// * `active_us` - the interval at a healthy charge, in microseconds.
// * `saver_us` - the longer interval used to conserve, in microseconds.
// * `critical_us` - the longest interval, in microseconds.
//
// # Returns
//
// The power plan.
PamojaPowerPlan pamoja_power_plan_new(uint64_t active_us, uint64_t saver_us, uint64_t critical_us);
// Returns a plan with the state-of-charge thresholds moved.
//
// # Arguments
//
// * `plan` - the plan to adjust.
// * `saver_below` - enter [`PamojaPowerMode::Saver`] below this charge.
// * `critical_below` - enter [`PamojaPowerMode::Critical`] below this charge.
//
// # Returns
//
// The adjusted plan.
PamojaPowerPlan pamoja_power_plan_with_thresholds(PamojaPowerPlan plan,
                                                  float saver_below,
                                                  float critical_below);
// Returns the mode a plan calls for at a state of charge.
//
// # Arguments
//
// * `plan` - the power plan.
// * `soc` - the battery state of charge, from 0.0 through 1.0.
//
// # Returns
//
// The mode the node should run in.
PamojaPowerMode pamoja_power_plan_mode(PamojaPowerPlan plan, float soc);
// Returns the mode a plan calls for, easing off one step while charging.
//
// A node taking charge is heading the right way, so it moves one step toward
// full duty rather than holding at what the charge alone would call for.
//
// # Arguments
//
// * `plan` - the power plan.
// * `soc` - the battery state of charge, from 0.0 through 1.0.
// * `charging` - `1` if the node is charging, `0` if it is not.
//
// # Returns
//
// The mode the node should run in.
PamojaPowerMode pamoja_power_plan_mode_while_charging(PamojaPowerPlan plan,
                                                      float soc,
                                                      uint8_t charging);
// Returns the work interval a plan uses in a mode.
//
// # Arguments
//
// * `plan` - the power plan.
// * `mode` - the mode to look up.
//
// # Returns
//
// The interval in microseconds.
uint64_t pamoja_power_plan_interval_for_us(PamojaPowerPlan plan, PamojaPowerMode mode);
// Returns the work interval a plan calls for at a state of charge.
//
// # Arguments
//
// * `plan` - the power plan.
// * `soc` - the battery state of charge, from 0.0 through 1.0.
//
// # Returns
//
// The interval in microseconds.
uint64_t pamoja_power_plan_interval_us(PamojaPowerPlan plan, float soc);
// Returns the level a link cost calls for.
//
// # Arguments
//
// * `cost` - what the link currently costs.
//
// # Returns
//
// The lowest level still worth its bytes at that cost.
PamojaTelemetryLevel pamoja_link_cost_threshold(PamojaLinkCost cost);
// Creates a reporter that ships events at or above a level.
//
// # Arguments
//
// * `threshold` - the lowest level to ship.
//
// # Returns
//
// A handle the caller must release with [`pamoja_reporter_free`].
PamojaReporter *pamoja_reporter_new(PamojaTelemetryLevel threshold);
// Returns the level a reporter is currently shipping from.
//
// # Arguments
//
// * `reporter` - the reporter.
//
// # Returns
//
// The threshold, or [`PamojaTelemetryLevel::Trace`] if `reporter` is null.
//
// # Safety
//
// `reporter` must be a live handle from [`pamoja_reporter_new`], or null.
PamojaTelemetryLevel pamoja_reporter_threshold(const PamojaReporter *reporter);
// Moves the level a reporter ships from.
//
// # Arguments
//
// * `reporter` - the reporter.
// * `threshold` - the new lowest level to ship.
//
// # Safety
//
// `reporter` must be a live handle from [`pamoja_reporter_new`], or null.
void pamoja_reporter_set_threshold(PamojaReporter *reporter, PamojaTelemetryLevel threshold);
// Moves the threshold to match what the link now costs.
//
// # Arguments
//
// * `reporter` - the reporter.
// * `cost` - what the link currently costs.
//
// # Safety
//
// `reporter` must be a live handle from [`pamoja_reporter_new`], or null.
void pamoja_reporter_adapt_to(PamojaReporter *reporter, PamojaLinkCost cost);
// Records an event and reports whether it is worth shipping.
//
// Only the level crosses the boundary, because the level is the whole of what
// the reporter decides on. The code and the optional value stay with the caller,
// which is free to ship its own event when this returns `true`.
//
// # Arguments
//
// * `reporter` - the reporter.
// * `level` - the severity of the event that occurred.
//
// # Returns
//
// `true` if the event passed the threshold and should be shipped, or `false` if
// it was counted and dropped, or `reporter` is null.
//
// # Safety
//
// `reporter` must be a live handle from [`pamoja_reporter_new`], or null.
bool pamoja_reporter_record(PamojaReporter *reporter, PamojaTelemetryLevel level);
// Returns how many events a reporter has seen at a level, shipped or not.
//
// # Arguments
//
// * `reporter` - the reporter.
// * `level` - the level to count.
//
// # Returns
//
// The count, or 0 if `reporter` is null.
//
// # Safety
//
// `reporter` must be a live handle from [`pamoja_reporter_new`], or null.
uint32_t pamoja_reporter_count(const PamojaReporter *reporter, PamojaTelemetryLevel level);
// Returns how many events a reporter has seen across every level.
//
// # Arguments
//
// * `reporter` - the reporter.
//
// # Returns
//
// The total, or 0 if `reporter` is null.
//
// # Safety
//
// `reporter` must be a live handle from [`pamoja_reporter_new`], or null.
uint32_t pamoja_reporter_total(const PamojaReporter *reporter);
// Returns how many events passed the threshold and were shipped.
//
// # Arguments
//
// * `reporter` - the reporter.
//
// # Returns
//
// The emitted count, or 0 if `reporter` is null.
//
// # Safety
//
// `reporter` must be a live handle from [`pamoja_reporter_new`], or null.
uint32_t pamoja_reporter_emitted(const PamojaReporter *reporter);
// Returns how many events the threshold dropped.
//
// # Arguments
//
// * `reporter` - the reporter.
//
// # Returns
//
// The dropped count, or 0 if `reporter` is null.
//
// # Safety
//
// `reporter` must be a live handle from [`pamoja_reporter_new`], or null.
uint32_t pamoja_reporter_dropped(const PamojaReporter *reporter);
// Takes a snapshot of the counters to ship in place of the event stream.
//
// # Arguments
//
// * `reporter` - the reporter.
//
// # Returns
//
// The snapshot, or an all-zero snapshot if `reporter` is null.
//
// # Safety
//
// `reporter` must be a live handle from [`pamoja_reporter_new`], or null.
PamojaTelemetrySnapshot pamoja_reporter_snapshot(const PamojaReporter *reporter);
// Releases a reporter handle.
//
// Passing null is a no-op.
//
// # Safety
//
// `reporter` must be a handle from [`pamoja_reporter_new`] that has not already
// been freed, or null. After this call it must not be used again.
void pamoja_reporter_free(PamojaReporter *reporter);
// Checks a manifest and opens the slot it names for a transfer in pieces.
//
// Every check that can be made without the image runs here, so a release that
// is not for this device, would roll it back, or does not fit is refused before
// a byte of it is accepted.
//
// The envelope is remembered until [`pamoja_updater_finish`], so the calls that
// follow do not repeat it. Each of those reopens the transfer from what the
// slot records, which is the same path a device takes after a reset, and is
// what lets a transfer survive one.
//
// # Arguments
//
// * `updater` - the updater.
// * `envelope` - the signed manifest offered to this device.
// * `envelope_len` - the length of `envelope`.
// * `has_now` - `true` if the device has a clock.
// * `now` - seconds since the Unix epoch, read only when `has_now` is `true`.
// * `out_slot` - receives the slot the image will be written into.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Safety
//
// `updater` must be a live handle from [`pamoja_updater_new`], `envelope` must
// point to at least `envelope_len` readable bytes or be null when it is 0, and
// `out_slot` must be writable or null.
PamojaStatus pamoja_updater_begin(PamojaUpdater *updater,
                                  const uint8_t *envelope,
                                  uintptr_t envelope_len,
                                  bool has_now,
                                  uint64_t now,
                                  uint8_t *out_slot);
// Takes the next piece of an image opened with [`pamoja_updater_begin`].
//
// # Arguments
//
// * `updater` - the updater.
// * `chunk` - the next bytes of the image, in order.
// * `len` - the length of `chunk`.
//
// # Returns
//
// [`PamojaStatus::Ok`] once the chunk is stored and its progress recorded.
//
// # Safety
//
// `updater` must be a live handle from [`pamoja_updater_new`], and `chunk` must
// point to at least `len` readable bytes, or be null when `len` is 0.
PamojaStatus pamoja_updater_write(PamojaUpdater *updater, const uint8_t *chunk, uintptr_t len);
// Reports how much of an opened image has arrived.
//
// # Arguments
//
// * `updater` - the updater.
// * `out_written` - receives the bytes stored so far.
// * `out_total` - receives the total the manifest declares.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Safety
//
// `updater` must be a live handle from [`pamoja_updater_new`], and the output
// pointers must be writable or null.
PamojaStatus pamoja_updater_progress(PamojaUpdater *updater,
                                     uint32_t *out_written,
                                     uint32_t *out_total);
// Finishes an opened image and marks the slot bootable if it matched.
//
// # Arguments
//
// * `updater` - the updater.
// * `out_slot` - receives the slot now holding a staged image.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, or a failure if the image is not the one the
// manifest described, which leaves the slot unbootable.
//
// # Safety
//
// `updater` must be a live handle from [`pamoja_updater_new`], and `out_slot`
// must be writable or null.
PamojaStatus pamoja_updater_finish(PamojaUpdater *updater, uint8_t *out_slot);
// Decides what to run, and records that decision before returning it.
//
// Call this once per boot, before jumping to an image. A staged image becomes
// pending here, so a device that resets before confirming reverts on the next
// call rather than trying a broken image forever.
//
// # Arguments
//
// * `updater` - the updater.
// * `out_boot` - receives the decision.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, or a failure if there is nothing to fall
// back to.
//
// # Safety
//
// `updater` must be a live handle from [`pamoja_updater_new`], and `out_boot`
// must be writable.
PamojaStatus pamoja_updater_on_boot(PamojaUpdater *updater, PamojaBoot *out_boot);
// Confirms the pending image, so it will be run from now on.
//
// # Arguments
//
// * `updater` - the updater.
// * `out_slot` - receives the slot that is now confirmed.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Safety
//
// `updater` must be a live handle from [`pamoja_updater_new`], and `out_slot`
// must be writable or null.
PamojaStatus pamoja_updater_confirm(PamojaUpdater *updater, uint8_t *out_slot);
// Fails the pending image and goes back to the confirmed one.
//
// # Arguments
//
// * `updater` - the updater.
// * `out_slot` - receives the slot to fall back to.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, or a failure if there is nothing to fall
// back to.
//
// # Safety
//
// `updater` must be a live handle from [`pamoja_updater_new`], and `out_slot`
// must be writable or null.
PamojaStatus pamoja_updater_revert(PamojaUpdater *updater, uint8_t *out_slot);
// Releases an updater handle.
//
// Passing null is a no-op.
//
// # Safety
//
// `updater` must be a handle from [`pamoja_updater_new`] that has not already
// been freed, or null. After this call it must not be used again.
void pamoja_updater_free(PamojaUpdater *updater);