bindings/dotnet/src/Pamoja.Core/Interop/NativeMethods.Operations.cs


    /// <summary>Checks a manifest and opens its slot for a transfer in pieces.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_updater_begin(
        IntPtr updater,
        ReadOnlySpan<byte> envelope,
        nuint envelopeLen,
        [MarshalAs(UnmanagedType.U1)] bool hasNow,
        ulong now,
        out byte outSlot);

    /// <summary>Takes the next piece of an opened image.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_updater_write(
        IntPtr updater,
        ReadOnlySpan<byte> chunk,
        nuint len);

    /// <summary>Reports how much of an opened image has arrived.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_updater_progress(
        IntPtr updater,
        out uint outWritten,
        out uint outTotal);

    /// <summary>Finishes an opened image and marks the slot bootable if it matched.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_updater_finish(IntPtr updater, out byte outSlot);

    /// <summary>Decides what to run, recording the decision before returning it.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_updater_on_boot(
        IntPtr updater,
        out PamojaBoot outBoot);

    /// <summary>Confirms the pending image.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_updater_confirm(IntPtr updater, out byte outSlot);

    /// <summary>Fails the pending image and goes back to the confirmed one.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_updater_revert(IntPtr updater, out byte outSlot);

    /// <summary>Releases an updater handle.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_updater_free(IntPtr updater);

    /// <summary>Creates a duty cycle from the time awake and the time asleep.</summary>
    [LibraryImport(Library)]
    public static partial PamojaDutyCycle pamoja_duty_cycle_new(ulong activeUs, ulong sleepUs);

    /// <summary>Creates a duty cycle that spends a fraction of a period awake.</summary>
    [LibraryImport(Library)]
    public static partial PamojaDutyCycle pamoja_duty_cycle_from_fraction(
        ulong periodUs,
        float fraction);

    /// <summary>Returns the whole period of a duty cycle.</summary>
    [LibraryImport(Library)]
    public static partial ulong pamoja_duty_cycle_period_us(PamojaDutyCycle duty);

    /// <summary>Returns the share of a period a duty cycle spends awake.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_duty_cycle_fraction(PamojaDutyCycle duty);

    /// <summary>Creates a power plan with the default thresholds.</summary>
    [LibraryImport(Library)]
    public static partial PamojaPowerPlan pamoja_power_plan_new(
        ulong activeUs,
        ulong saverUs,
        ulong criticalUs);

    /// <summary>Returns a plan with the state-of-charge thresholds moved.</summary>
    [LibraryImport(Library)]
    public static partial PamojaPowerPlan pamoja_power_plan_with_thresholds(
        PamojaPowerPlan plan,
        float saverBelow,
        float criticalBelow);

    /// <summary>Returns the mode a plan calls for at a state of charge.</summary>
    [LibraryImport(Library)]
    public static partial PamojaPowerMode pamoja_power_plan_mode(PamojaPowerPlan plan, float soc);

    /// <summary>Returns the mode, eased one step toward full duty while charging.</summary>
    [LibraryImport(Library)]
    public static partial PamojaPowerMode pamoja_power_plan_mode_while_charging(
        PamojaPowerPlan plan,
        float soc,
        byte charging);

    /// <summary>Returns the work interval a plan uses in a mode.</summary>
    [LibraryImport(Library)]
    public static partial ulong pamoja_power_plan_interval_for_us(
        PamojaPowerPlan plan,
        PamojaPowerMode mode);

    /// <summary>Returns the work interval a plan calls for at a state of charge.</summary>
    [LibraryImport(Library)]
    public static partial ulong pamoja_power_plan_interval_us(PamojaPowerPlan plan, float soc);

    /// <summary>Returns the level a link cost calls for.</summary>
    [LibraryImport(Library)]
    public static partial PamojaTelemetryLevel pamoja_link_cost_threshold(PamojaLinkCost cost);

    /// <summary>Creates a reporter that ships events at or above a level.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_reporter_new(PamojaTelemetryLevel threshold);

    /// <summary>Returns the level a reporter is currently shipping from.</summary>
    [LibraryImport(Library)]
    public static partial PamojaTelemetryLevel pamoja_reporter_threshold(IntPtr reporter);

    /// <summary>Moves the level a reporter ships from.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_reporter_set_threshold(
        IntPtr reporter,
        PamojaTelemetryLevel threshold);

    /// <summary>Moves the threshold to match what the link now costs.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_reporter_adapt_to(IntPtr reporter, PamojaLinkCost cost);

    /// <summary>Records an event and reports whether it is worth shipping.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_reporter_record(
        IntPtr reporter,
        PamojaTelemetryLevel level);

    /// <summary>Returns how many events a reporter has seen at a level.</summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_reporter_count(
        IntPtr reporter,
        PamojaTelemetryLevel level);

    /// <summary>Returns how many events a reporter has seen across every level.</summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_reporter_total(IntPtr reporter);

    /// <summary>Returns how many events passed the threshold and were shipped.</summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_reporter_emitted(IntPtr reporter);

    /// <summary>Returns how many events the threshold dropped.</summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_reporter_dropped(IntPtr reporter);

    /// <summary>Takes a snapshot of a reporter's counters.</summary>
    [LibraryImport(Library)]
    public static partial PamojaTelemetrySnapshot pamoja_reporter_snapshot(IntPtr reporter);

    /// <summary>Releases a reporter handle.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_reporter_free(IntPtr reporter);
}
